# py-fastglmpca

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg
.github/workflows/: publish.yml  tests.yml
examples/: Coordinates_projection.ipynb  scRNA-Seq.ipynb
fastglmpca/: __init__.py  utils.py
tests/: test_adaptive_lr.py  test_poisson_glmpca.py  test_poisson_glmpca_exact.py  test_predicted_counts.py  test_project.py
