[metadata]
name = fastglmpca
version = 0.0.4
author = Sergey Isaev
author_email = s@isaev.cc
description = Python implementation of fastglmpca [Weine et al., Bioinformatics, 2024] algorithm with PyTorch
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/serjisa/py-fastglmpca
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
include_package_data = True
install_requires =
    numpy
    torch
    scipy
    tqdm
